examples/ShouldFail/ParseErrors/BrokenLex2.java
class BrokenLex2{
	public static void main (String[] a) {
	  y = a[1]>0;
	  System.out.println(y);
    }
}
